# conduit-bench

./: .gitignore  .travis.yml  README.md  conduit-bench.cabal  run  stack.yaml
src/: Bench.hs  BenchCriterion.hs  ConduitBench.hs  Main.hs
