name:                conduit-bench
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/conduit-bench#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Ruben Pieters
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable conduit-bench
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , conduit
