name:                conduit-bench
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/conduit-bench#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Ruben Pieters
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  default-language:  Haskell2010
  hs-source-dirs:    src
  build-depends:     base >= 4.7 && < 5
                   , conduit
                   , criterion
  exposed-modules:   ConduitBench
  GHC-Options:       -O2 -Wall


executable bench
  default-language: Haskell2010
  hs-source-dirs:   src
  main-is:          Bench.hs
  ghc-options:      -O2 -rtsopts -threaded -main-is Bench
  other-modules:    ConduitBench
  build-depends:    base >= 4.7 && < 5
                  , conduit
                  , criterion

executable bench-criterion
  default-language: Haskell2010
  hs-source-dirs:   src
  main-is:          BenchCriterion.hs
  ghc-options:      -O2 -rtsopts -threaded -main-is BenchCriterion
  other-modules:    ConduitBench
  build-depends:    base >= 4.7 && < 5
                  , conduit
                  , criterion

